--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -42,7 +42,7 @@ a {
 	float: left;
 	background: #eee;
 	font-weight: bold;
-	padding: 0px;
+	margin: 1px;
 }
 
 #menu a {
@@ -52,7 +52,7 @@ a {
 
 #menu a:hover {
 	background: #000;
-	color: #fff;
+	color: #ffffff;
 }
 
 .clear {
