--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -2,10 +2,14 @@ body {
   font: 13px "Trebuchet MS";
   color: #000;
   background-color: #fff;
-  text-align: center;
   padding: 0px;
   margin: 0px;
 }
+
+#header {
+	border-bottom: 1px dotted #000;
+	margin: 5px;
+	}
 
 a {
   outline: none;
@@ -31,7 +35,7 @@ a {
 
 #menu {
 	float: right;
-	margin-right: 100px;
+	margin-right: 20px;
 }
 
 #menu ul {
@@ -55,6 +59,73 @@ a {
 	color: #ffffff;
 }
 
+#footer {
+	border-top: 1px dotted #000;
+	margin: 5px;
+	}
+
 .clear {
 	clear: both;
 }
+
+#content {
+	padding: 17px;
+	text-align: center;
+}
+.input {
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	display: block;
+}
+
+.field {
+	display: block;
+	text-align: left;
+
+}
+
+.text_box {
+	width: 800px;
+	height: 32px;
+	font: 22px "Trebuchet MS";
+	border: 1px solid #444;
+	background: url(images/form_bg.jpg) repeat-x;
+}
+
+.text_box_small {
+	width: 250px;
+	height: 32px;
+	float: left;
+	font: 22px "Trebuchet MS";
+	border: 1px solid #444;
+	background: url(images/form_bg.jpg) repeat-x;
+}
+
+.submit_button {
+	background: url(images/gradient.png);
+	border: none;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	padding: 6px;
+	width: 120px;
+	color: #fff;
+	font-weight: bold;
+}
+.submit_button:hover {
+	background: url(images/gradient_hover.png);
+	color: #eee;
+}
+
+#options {
+	display: none;
+}
+
+.pre {
+	font: 22px "Trebuchet MS";
+	float: left;
+	padding: 2px;
+	}
+	
+	
