--- a/includes/themes/default/style.css
+++ b/includes/themes/default/style.css
@@ -100,8 +100,7 @@ a {
 	border: 1px dotted #000;
 	padding: 7px;
 	width: 600px;
-	margin-left: 25%;
-	margin-right: 25%;
+	align: center;
 	background: #f59fa1;
 }
 
@@ -216,4 +215,23 @@ border-style: none;
 	filter:alpha(opacity=0); 
    -moz-opacity: 0; 
    opacity: 0; 
+}
+#staterror_title {
+        font-family: Georgia, "Times New Roman", Times, serif;
+        font-size:24px;
+        margin-top: 5px; margin-bottom: 0px;
+        text-align: center;
+        font-weight: normal;
+        color: #222;
+}
+#staterror_text {
+        font-family: "Lucida Grande", Tahoma;
+        font-size: 10px;
+        font-weight: lighter;
+        font-variant: normal;
+        text-transform: uppercase;
+        color: #666666;
+        margin-top: 10px;
+        text-align: center!important;
+        letter-spacing: 0.3em;
 }
